# wechat-pc-agent

./: .env.example  .gitignore  README.md  build.bat  build.spec  config.example.json  config.py  main.py  pyproject.toml
.github/workflows/: build-exe.yml
app/: window.py
app/widgets/: chat_selector.py  control_panel.py  db_panel.py  log_viewer.py  progress_panel.py  settings_dialog.py  status_panel.py
app/workers/: contact_worker.py  db_sync_worker.py  db_worker.py  history_worker.py  listener_worker.py  sender_worker.py  vision_worker.py  ws_worker.py
bridge/: ws_client.py
tests/: conftest.py  test_commander.py  test_config.py  test_contacts.py  test_db_crypto.py  test_db_decrypt.py  test_db_reader.py  test_db_worker.py  test_human_timing.py  test_rate_limiter.py  test_reader.py  test_session.py  test_session_manager.py  test_settings_dialog.py  test_ui_simulator.py  test_ui_state.py  test_vision.py  test_wal_monitor.py  test_win32_utils.py  test_workers.py  test_ws_client.py
utils/: paths.py
wechat/: commander.py  contacts.py  db_decrypt.py  db_reader.py  human_timing.py  reader.py  session.py  ui_state.py  wal_monitor.py  win32_utils.py
wechat/db/: __init__.py  crypto.py  decompress.py  decryptor.py  key_extract.py  reader.py  sync_state.py
wechat/simulation/: __init__.py  human_timing.py  rate_limiter.py  session_manager.py  ui_simulator.py
wechat/vision/: __init__.py  circuit_breaker.py  diff_tracker.py  light_client.py  ocr_client.py  perception.py  types.py  vlm_client.py
