[project]
name = "wechat-pc-agent"
version = "0.1.0"
description = "WeChat PC automation agent with PyQt6 GUI"
requires-python = ">=3.10"
dependencies = [
    "wxauto>=3.9.0",
    "PyQt6>=6.6.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "wdecipher>=0.1.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-qt>=4.3.0",
    "pyinstaller>=6.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project.scripts]
wechat-agent = "main:main"
