[project]
name = "wechat-pc-agent"
version = "0.1.0"
description = "WeChat PC automation agent with PyQt6 GUI"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",
    "pyperclip>=1.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-qt>=4.3.0",
    "pyinstaller>=6.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.packages.find]
include = ["app*", "bridge*", "utils*", "wechat*"]
exclude = ["tests*"]
namespaces = false

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
wechat-agent = "main:main"
